[package]
name = "text"
version = "0.1.0"
edition = "2021"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
fontdue = { version = "0.8.0", features = ["parallel"] }
itertools = "0.12.1"
noisy_float = "0.2.0"
thiserror = "1.0.59"
tiny-skia = "0.11.4"
