[package]
name = "text"
version = "0.2.1"
edition = "2024"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
fontdue = { version = "0.9", features = ["parallel"] }
itertools = "0.14"
noisy_float = "0.2.0"
thiserror = "2"
tiny-skia = "0.11.4"
